--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,8 @@ python:
   - "3.5"
   - "3.6"
   # PyPy versions
-  - "pypy"  # PyPy2 2.5.0
-  - "pypy3" # Pypy3 2.4.0
-  - "pypy-5.3.1"
+  #- "pypy"  # PyPy2 2.5.0
+
 # command to install dependencies
 install:
   - pip install pandas
